--- a/card.html
+++ b/card.html
@@ -76,6 +76,7 @@
                 </div>
                 <div class="price-card">
                     <span class="this-number">20000</span> <span class="rub">q</span>
+                    <a href="javascript: void(0)" class="btn-favorites"></a>
                 </div>
                 <div class="descript-card">
                     <div class="title">Обо мне</div>
