--- a/card.html
+++ b/card.html
@@ -16,7 +16,7 @@
     <!-- Select2 CSS -->
     <!-- <link rel="stylesheet" type="text/css" href="./css/plugins/select2.min.css"> -->
     <!-- Swiper CSS-->
-    <link rel="stylesheet" type="text/css" href="./css/plugins/swiper.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./css/plugins/swiper.min.css"> -->
     <!-- Modal CSS-->
     <!-- <link rel="stylesheet" type="text/css" href="./css/plugins/jquery.modal.min.css"> -->
     <!-- AOS CSS-->
@@ -35,7 +35,7 @@
         <div class="new-container">
             <div class="header-inner">
                 <nav class="flex-block">
-                    <a href="javascript: void(0)" class="header-nav_link flex-block active">
+                    <a href="javascript: void(0)" class="header-nav_link flex-block">
                         <img src="./media/icons/catalog.svg" alt="">
                         <span>Каталог</span>
                     </a>
@@ -139,7 +139,7 @@
 <!-- jquery modal -->
 <!-- <script type="text/javascript" src="./js/plugins/jquery.modal/jquery.modal.min.js"></script> -->
 <!-- swiper-->
-<script type="text/javascript" src="./js/plugins/swiper/swiper.min.js"></script>
+<!-- <script type="text/javascript" src="./js/plugins/swiper/swiper.min.js"></script> -->
 <!-- aos -->
 <script type="text/javascript" src="./js/plugins/aos/aos.js"></script>
 <!-- Rellax -->
