--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="new-container">
             <div class="header-inner">
                 <nav class="flex-block">
-                    <a href="javascript: void(0)" class="header-nav_link flex-block active">
+                    <a href="javascript: void(0)" class="header-nav_link flex-block">
                         <img src="./media/icons/catalog.svg" alt="">
                         <span>Каталог</span>
                     </a>
