--- a/cart.html
+++ b/cart.html
@@ -58,14 +58,13 @@
     </header>
 
     <main>
-        <section class="cart card">
+        <section class="cart card catalog">
             <div class="new-container">
                 <h1>Корзина</h1>
                 <div class="cart-items_wrapper">
                     <div class="cart-item flex-block" id="1">
                         <a href="javascript: void(0)" class="btn-delete"></a>
                         <div class="img-wrapper" style="background-image: url('./media/img/catalog/img1.jpg');">
-                            <!-- <img src="./media/img/catalog/img1.jpg" alt=""> -->
                         </div>
                         <div class="descript flex-block">
                             <div class="title">Алина</div>
@@ -89,7 +88,6 @@
                     <div class="cart-item flex-block" id="2">
                         <a href="javascript: void(0)" class="btn-delete"></a>
                         <div class="img-wrapper" style="background-image: url('./media/img/catalog/img2.jpg');">
-                            <!-- <img src="./media/img/catalog/img1.jpg" alt=""> -->
                         </div>
                         <div class="descript flex-block">
                             <div class="title">Ирен</div>
@@ -114,6 +112,49 @@
                 <div class="cart-empty-wpapper">
                     <div class="text">Ваша корзина пуста!</div>
                     <a href="javascript: void(0)" class="btn btn-default">Перейти в каталог</a>
+                </div>
+                <div class="last-views-wrapper flex-block catalog-items">
+                    <h2>Вы смотрели</h2>
+                    <div id="1" class="catalog-item flex-block">
+                        <div class="img-wrapper" style="background-image: url('./media/img/catalog/img1.jpg');">
+                            <!-- <img src="./media/img/catalog/img1.jpg" alt=""> -->
+                        </div>
+                        <div class="descript flex-block">
+                            <div class="item-name">Алина</div>
+                            <ul class="list">
+                                <li class="flex-block" data-before="Возраст:"><span>19 лет</span></li>
+                                <li class="flex-block" data-before="Рост:"><span>173 см</span></li>
+                                <li class="flex-block" data-before="Вес:"><span>62 кг</span></li>
+                                <li class="flex-block" data-before="Грудь:"><span>2</span></li>
+                            </ul>
+                            <div class="item-price"><span class="this-number">20000</span> <span class="rub">q</span>
+                            </div>
+                            <div class="btns-wrapper flex-block">
+                                <a href="javascript: void(0)" class="btn-favorites"></a>
+                                <a href="javascript: void(0)" class="btn btn-default">Забронировать</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="2" class="catalog-item flex-block">
+                        <div class="img-wrapper" style="background-image: url('./media/img/catalog/img2.jpg');">
+                            <!-- <img src="./media/img/catalog/img1.jpg" alt=""> -->
+                        </div>
+                        <div class="descript flex-block">
+                            <div class="item-name">Алина</div>
+                            <ul class="list">
+                                <li class="flex-block" data-before="Возраст:"><span>19 лет</span></li>
+                                <li class="flex-block" data-before="Рост:"><span>173 см</span></li>
+                                <li class="flex-block" data-before="Вес:"><span>62 кг</span></li>
+                                <li class="flex-block" data-before="Грудь:"><span>2</span></li>
+                            </ul>
+                            <div class="item-price"><span class="this-number">20000</span> <span class="rub">q</span>
+                            </div>
+                            <div class="btns-wrapper flex-block">
+                                <a href="javascript: void(0)" class="btn-favorites"></a>
+                                <a href="javascript: void(0)" class="btn btn-default">Забронировать</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
