--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 </body>
 
 
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
 <!-- Jquery -->
 <script type=" text/javascript" src="./js/librarys/jquery-3.3.1.min.js"></script>
 <!-- current-device -->
